# Aunsorm-Security-Platform

./: .dockerignore  .env.example  .gitignore  AGENT-PROTOCOL.md  AGENTS-REQUESTS.md  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DOCKER_OPTIMIZATION.md  Dockerfile  Dockerfile.acme  Dockerfile.e2ee  Dockerfile.kms  Dockerfile.metrics  Dockerfile.pqc  Dockerfile.x509  JWT_AUTHENTICATION_GUIDE.md  LICENSE  Legacy.md  MICROSERVICES.md  PLAN.md  PROD_PLAN.md  PROJECT_SUMMARY.md  README.md  ROADMAP.md  SECURITY.md  TODO.md  compose.yaml  decode-jwt.ps1  deny.toml  gateway-routes.conf  package.json  port-map.yaml  production-debug.md  production-fix-instructions.md  routes.rs  start-all.ps1  test-all-services.ps1  (+2 more)
.github/: pull_request_template.md
benches/: Cargo.toml  aead.rs  performance_analysis.rs  rng_comparison.rs  session.rs  x509.rs
benches/src/: lib.rs
certifications/: AGENTS.md  compliance_status.md  eidas_assessment_template.md  soc2_report_template.md
ci/: endpoint-validator-allowlist.json
config/: acme.toml  fabric.toml
crates/: AGENTS.md
crates/acme/: AGENTS.md  Cargo.toml  README.md
crates/acme/src/: account.rs  authorization.rs  certificates.rs  directory.rs  jws.rs  lib.rs  nonce.rs  order.rs  renewal.rs  rng.rs  storage.rs  validation.rs
crates/acme/src/providers/: AGENTS.md
crates/acme/src/providers/dns/: AGENTS.md  cloudflare.rs  mod.rs  route53.rs
crates/acme/src/storage/: bundle.rs  error.rs  kms.rs  local.rs  mod.rs  outcome.rs
crates/acme/src/validation/: AGENTS.md  dns01.rs  http01.rs  mod.rs
crates/cli/: AGENTS.md  Cargo.toml  README.md
crates/cli/src/: main.rs  rng.rs
crates/cli/tests/: stdout_dash.rs
crates/core/: AGENTS.md  Cargo.toml  README.md
crates/core/sealed/: aunsorm_rng.rs
crates/core/src/: calibration.rs  clock.rs  error.rs  kdf.rs  lib.rs  salts.rs  session.rs  transparency.rs
crates/core/src/sealed/: aunsorm_rng.rs
crates/core/tests/: calibration_prop.proptest-regressions  calibration_prop.rs  transparency.rs
crates/endpoint-validator/: Cargo.toml  README.md
crates/endpoint-validator/examples/: mock_api.rs
crates/endpoint-validator/src/: lib.rs
crates/endpoint-validator/tests/: basic.rs
crates/id/: AGENTS.md  Cargo.toml  README.md
crates/id/src/: lib.rs  rng.rs
crates/jwt/: AGENTS.md  Cargo.toml  README.md
crates/jwt/src/: claims.rs  error.rs  jti.rs  jwe.rs  jwk.rs  lib.rs  rng.rs  signer.rs  tests.rs  verifier.rs
crates/jwt/tests/: jwe_tests.rs
crates/kms/: AGENTS.md  Cargo.toml  README.md
crates/kms/src/: approval.rs  azure.rs  backup.rs  client.rs  config.rs  error.rs  gcp.rs  lib.rs  local.rs  pkcs11.rs  remote.rs  rng.rs  rotation.rs  tests.rs  util.rs
crates/kms/tests/data/: azure_conformance.json  gcp_conformance.json  pkcs11_conformance.json
crates/mdm/: AGENTS.md  Cargo.toml  README.md
crates/mdm/src/: lib.rs  serde_utils.rs
crates/mdm/src/retention/: mod.rs
crates/packet/: AGENTS.md  Cargo.toml  README.md
crates/packet/src/: crypto.rs  error.rs  header.rs  hpke.rs  lib.rs  packet.rs  rng.rs  session.rs  transcript.rs  util.rs
crates/packet/tests/: roundtrip_prop.rs
crates/pqc/: AGENTS.md  Cargo.toml  README.md
crates/pqc/src/: error.rs  kem.rs  lib.rs  signature.rs  strict.rs
crates/pytests/: AGENTS.md  Cargo.toml  README.md
crates/pytests/src/: lib.rs
crates/pytests/vectors/: reference.json
crates/server/: AGENTS.md  Cargo.toml  ENTROPY_MIXING_EXPERIMENTS.md  PRODUCTION_ENTROPY_MODEL.md  RANDOM_IMPROVEMENTS.md  README.md  ZASIAN_AGENTS.md  ZASIAN_HTTP3_QUIC.md
crates/server/src/: acme.rs  clock_refresh.rs  config.rs  error.rs  fabric.rs  lib.rs  main.rs  rng.rs  routes.rs  routes_backup.rs.disabled  routes_complex.rs.disabled  state.rs  telemetry.rs  tests.rs  transparency.rs  webhook.rs
crates/server/src/jobs/: mod.rs
crates/server/src/quic/: datagram.rs  listener.rs  mod.rs
crates/server/src/routes/acme/: directory.rs  mod.rs  nonce.rs  validation.rs
crates/wasm/: AGENTS.md  Cargo.toml  README.md
crates/wasm/src/: bindings.rs  internal.rs  lib.rs  tests.rs
crates/x509/: AGENTS.md  Cargo.toml  README.md
crates/x509/src/: automation.rs  ca.rs  lib.rs  optimizations.rs
docker/: Dockerfile.acme  Dockerfile.auth  Dockerfile.blockchain  Dockerfile.cli-gateway  (+16 more)
fuzz/: .gitignore  AGENTS.md  Cargo.toml
fuzz/fuzz_targets/: fuzz_packet.rs  fuzz_session.rs  packet_roundtrip.rs  session_ratchet.rs  session_store_roundtrip.rs
tests/: AGENTS.md  Cargo.toml  README.md
tests/blockchain/: AGENTS.md  config.example.toml  cross_network.rs  integrity_cases.rs  media_ledger.rs  mock_ledger.rs  retention.rs  retention_audit.rs
tests/data/: AGENTS.md
tests/data/acme/: AGENTS.md  README.md  dns01_fixture.json  dns_mock_operations.json  dns_mock_publish.json  http01_fixture.json
tests/data/blockchain/: README.md  fabric_to_quorum_transfers.json  fabric_to_quorum_transfers.md  quorum_to_sepolia_settlements.json  quorum_to_sepolia_settlements.md  retention_policy_audit.json  retention_policy_audit.md  retention_sync_reconcile.json  retention_sync_reconcile.md  retention_sync_status.json
tests/data/identity/: README.md  identity_flow_alpha.json
tests/data/kms/: AGENTS.md  azure_ed25519_conformance.json  gcp_ed25519_conformance.json  pkcs11_ed25519_conformance.json
tests/fixtures/: test-token-request.json  test_results.txt
tests/fixtures/kms/: kms_azure_aes_wrap.json  kms_certification_report.json  kms_gcp_ed25519.json  kms_pkcs11_ed25519.json
tests/src/: lib.rs
tests/src/acme/: dns_mock.rs  mock_server.rs  mod.rs
tests/tests/: acme_certificate.rs  acme_flow.rs  acme_renewal.rs  acme_staging.rs  blockchain_cross_network_plan.rs  blockchain_media_ledger.rs  blockchain_poc.rs  blockchain_retention.rs  blockchain_retention_audit.rs  calibration_endpoints.rs  e2e_gateway_smoke.rs  hacker_pen_test.rs  http3_datagram.rs  http3_poc_ci.rs  identity_flows.rs  kms_conformance.rs  oauth_rfc_compliance.rs  packet_core_roundtrip.proptest-regressions  packet_core_roundtrip.rs  rng_statistical_validation.rs  soak.rs
(+156 files in other folders)
