[workspace]
members = [
    "crates/core",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
rust-version = "1.76"

[workspace.dependencies]
argon2 = { version = "0.5", default-features = false, features = ["std", "password-hash"] }
base64 = { version = "0.21", default-features = false, features = ["std"] }
hkdf = "0.12"
rand_core = { version = "0.6", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
thiserror = "1"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
criterion = { version = "0.5" }
hex = "0.4"
