[workspace]
members = [
    "crates/cli",
    "crates/core",
    "crates/packet",
    "crates/pqc",
    "crates/jwt",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
rust-version = "1.76"

[workspace.dependencies]
argon2 = { version = "0.5", default-features = false, features = ["std", "password-hash"] }
base64 = { version = "0.21", default-features = false, features = ["std"] }
hkdf = "0.12"
rand_core = { version = "0.6", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
thiserror = "1"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
criterion = { version = "0.5" }
hex = "0.4"
serde_json = { version = "1", default-features = false, features = ["std"] }
aes-gcm = { version = "0.10", default-features = false, features = ["aes"] }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["std"] }
aead = { version = "0.5" }
hmac = { version = "0.12" }
pmac = { version = "0.7" }
aes = { version = "0.8" }
subtle = { version = "2.5" }
pqcrypto-kyber = { version = "0.8.1", default-features = false }
pqcrypto-dilithium = { version = "0.5.0", default-features = false }
pqcrypto-falcon = { version = "0.4.1", default-features = false }
pqcrypto-sphincsplus = { version = "0.7.2", default-features = false }
pqcrypto-traits = { version = "0.3.5", default-features = false }
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
