[workspace]
members = [
    "crates/acme",
    "crates/cli",
    "crates/core",
    "crates/packet",
    "crates/pqc",
    "crates/kms",
    "crates/jwt",
    "crates/id",
    "crates/x509",
    "crates/server",
    "crates/wasm",
    "crates/pytests",
    "crates/mdm",
    "tests",
    "benches",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
rust-version = "1.76"
version = "0.4.5"

[workspace.dependencies]
argon2 = { version = "0.5", default-features = false, features = ["std", "password-hash"] }
base64 = { version = "0.21", default-features = false, features = ["std"] }
hkdf = "0.12"
rand_core = { version = "0.6", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
thiserror = "1"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
criterion = { version = "0.5" }
hex = "0.4"
idna = "1.1"
unicode-normalization = "0.1"
serde_json = { version = "1", default-features = false, features = ["std"] }
aes-gcm = { version = "0.10", default-features = false, features = ["aes"] }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["std"] }
aead = { version = "0.5" }
hmac = { version = "0.12" }
pmac = { version = "0.7" }
aes = { version = "0.8" }
subtle = { version = "2.5" }
pqcrypto-kyber = { version = "0.8.1", default-features = false }
pqcrypto-dilithium = { version = "0.5.0", default-features = false }
pqcrypto-falcon = { version = "0.4.1", default-features = false }
pqcrypto-sphincsplus = { version = "0.7.2", default-features = false }
pqcrypto-traits = { version = "0.3.5", default-features = false }
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
sysinfo = "0.29"
aes-siv = { version = "0.7", default-features = false, features = ["alloc"] }
hpke = { version = "0.11", default-features = false, features = ["alloc", "std", "x25519"] }
rand_chacha = { version = "0.3", default-features = false, features = ["std"] }
ring = "0.17"
rsa = "0.9.8"
url = "2.5"
