[package]
name = "interop-benches"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
criterion = { workspace = true }
aunsorm-core = { path = "../crates/core" }
aunsorm-packet = { path = "../crates/packet" }
aunsorm-x509 = { path = "../crates/x509" }
rand_core = "0.6"
rsa = { workspace = true }

[[bench]]
name = "aead"
path = "aead.rs"
harness = false

[[bench]]
name = "session"
path = "session.rs"
harness = false

[[bench]]
name = "x509"
path = "x509.rs"
harness = false

[[bench]]
name = "performance_analysis"
path = "performance_analysis.rs"
harness = false

[[bench]]
name = "rng_comparison"
path = "rng_comparison.rs"
harness = false
