[package]
name = "aunsorm-tests"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"
publish = false

[features]
default = []
aes-siv = ["aunsorm-packet/aes-siv"]

[dependencies]
aunsorm-core = { path = "../crates/core" }
aunsorm-packet = { path = "../crates/packet" }
proptest = "1.4"
base64 = { workspace = true }
sha2 = { workspace = true }
