[package]
name = "aunsorm-tests"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"
publish = false

[features]
default = []
aes-siv = ["aunsorm-packet/aes-siv"]
kms-gcp = ["aunsorm-kms/kms-gcp"]
kms-azure = ["aunsorm-kms/kms-azure"]
kms-pkcs11 = ["aunsorm-kms/kms-pkcs11"]
kms-remote = ["kms-gcp", "kms-azure"]

[dependencies]
aunsorm-core = { path = "../crates/core" }
aunsorm-packet = { path = "../crates/packet" }
aunsorm-kms = { path = "../crates/kms" }
proptest = "1.4"
base64 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
aes-gcm = { workspace = true }
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tiny_http = "0.12"
