[package]
name = "aunsorm-tests"
version = "0.4.5"
edition = "2021"
rust-version = "1.76"
publish = false

[features]
default = []
http3-experimental = ["aunsorm-server/http3-experimental"]
aes-siv = ["aunsorm-packet/aes-siv"]
kms-gcp = ["aunsorm-kms/kms-gcp"]
kms-azure = ["aunsorm-kms/kms-azure"]
kms-pkcs11 = ["aunsorm-kms/kms-pkcs11"]
kms-remote = ["kms-gcp", "kms-azure"]

[dependencies]
aunsorm-core = { path = "../crates/core" }
aunsorm-acme = { path = "../crates/acme" }
aunsorm-packet = { path = "../crates/packet" }
aunsorm-jwt = { path = "../crates/jwt", features = ["kms"] }
http = "0.2"
aunsorm-kms = { path = "../crates/kms" }
aunsorm-x509 = { path = "../crates/x509" }
aunsorm-server = { path = "../crates/server" }
aunsorm-mdm = { path = "../crates/mdm" }
proptest = "1.4"
base64 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
aes-gcm = { workspace = true }
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tiny_http = "0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
pem = "3"
tempfile = "3"
x509-parser = "0.18"
axum = { version = "0.7", features = ["json"] }
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
url = { workspace = true }
time = { version = "0.3", features = ["macros"] }
