[package]
name = "aunsorm-acme"
version = "0.5.0"
edition = "2021"
license = "Apache-2.0"
description = "ACME protocol primitives for the Aunsorm security suite"
readme = "README.md"
authors = ["Aunsorm Authors <security@aunsorm.dev>"]
repository = "https://github.com/Neudzulab/Aunsorm-Security-Platform"
homepage = "https://github.com/Neudzulab/Aunsorm-Security-Platform"
keywords = ["acme", "certificate", "tls", "cryptography", "security"]
categories = ["cryptography", "network-programming"]

[dependencies]
base64 = { workspace = true }
http = "0.2"
p256 = { version = "0.13", features = ["ecdsa"] }
rsa = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true, features = ["oid"] }
thiserror = { workspace = true }
url = { workspace = true, features = ["serde"] }
idna = { workspace = true }
percent-encoding = { workspace = true }
ed25519-dalek = { version = "~2.1", default-features = false, features = ["std", "pkcs8"] }
signature = { version = "2", default-features = false, features = ["std"] }
zeroize = { workspace = true }
time = { version = "0.3", features = ["formatting", "macros", "serde", "parsing"] }
rand_core = { workspace = true }
hkdf = "0.12"
rcgen = { version = "0.14", features = ["pem", "x509-parser"] }
async-trait = "0.1"
pem = "3"
aunsorm-core = { path = "../core", version = "0.5" }
aunsorm-x509 = { path = "../x509", version = "0.5" }
aunsorm-kms = { path = "../kms", version = "0.5" }

[dev-dependencies]
pretty_assertions = "1"
rand_chacha = { workspace = true }
x509-parser = { version = "0.18", features = ["verify"] }
tokio = { version = "1", features = ["macros", "rt"] }
