[package]
name = "aunsorm-cli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Command-line interface for the Aunsorm secure tooling suite"
rust-version = "1.76"

[dependencies]
clap = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
aunsorm-jwt = { path = "../jwt", features = ["sqlite", "kms"] }
aunsorm-core = { path = "../core" }
aunsorm-packet = { path = "../packet" }
aunsorm-pqc = { path = "../pqc" }
aunsorm-x509 = { path = "../x509" }
aunsorm-kms = { path = "../kms" }
zeroize = { workspace = true }
humantime = "2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
