[package]
name = "aunsorm-cli"
version = "0.4.5"
edition = "2021"
license = "Apache-2.0"
description = "Command-line interface for the Aunsorm secure tooling suite"
rust-version = "1.76"

[features]
default = []
aes-siv = ["aunsorm-packet/aes-siv"]

[dependencies]
aunsorm-acme = { path = "../acme" }
aunsorm-core = { path = "../core" }
aunsorm-jwt = { path = "../jwt", features = ["sqlite", "kms"] }
aunsorm-kms = { path = "../kms" }
aunsorm-packet = { path = "../packet" }
aunsorm-pqc = { path = "../pqc" }
aunsorm-x509 = { path = "../x509" }
base64 = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
hkdf = { workspace = true }
http = "0.2"
humantime = "2"
rand = { version = "0.8", features = ["std"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
ureq = { version = "2.9" }
url = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
