[package]
name = "aunsorm-core"
version = "0.4.0"
edition = "2021"
rust-version = "1.76"
license = "Apache-2.0"
description = "Core cryptographic primitives for the Aunsorm security toolkit."
readme = "README.md"
authors = ["Aunsorm Authors <security@aunsorm.dev>"]

[dependencies]
argon2 = { workspace = true }
base64 = { workspace = true }
hkdf = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
sysinfo = { workspace = true }
unicode-normalization = { workspace = true }
subtle = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rand = "0.8"
proptest = "1"
serde_json = { workspace = true }
