[package]
name = "endpoint-validator"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
futures = "0.3.31"
http = "0.2"
openapiv3 = "1.0"
quick-xml = { version = "0.31", features = ["serialize"] }
regex = "1.10"
reqwest = { version = "0.11", default-features = false, features = ["json", "gzip", "stream", "rustls-tls"] }
scraper = "0.19"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }
thiserror = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
url = { workspace = true }

[dev-dependencies]
axum = { version = "0.7", features = ["macros"] }
serde_json = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi"] }
