[package]
name = "aunsorm-id"
version = "0.5.0"
edition = "2021"
rust-version = "1.76"
license = "Apache-2.0"
description = "Head-anchored unique identifier generator shared across Aunsorm projects."
readme = "README.md"
authors = ["Aunsorm Authors <security@aunsorm.dev>"]

[features]
default = []
serde = ["dep:serde"]

[dependencies]
base64 = { workspace = true }
hex = { workspace = true }
once_cell = "1"
rand_core = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
hkdf = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }
