[package]
name = "aunsorm-jwt"
version = "0.5.0"
edition = "2021"
authors = ["Aunsorm Identity Team"]
description = "Ed25519 tabanlı JWT/JWKS ve JTI store bileşeni"
license = "Apache-2.0"
repository = "https://example.com/aunsorm"
rust-version = "1.76"

[features]
default = ["sqlite"]
sqlite = ["dep:rusqlite"]
kms = ["dep:aunsorm-kms"]

[dependencies]
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
rand_core = { workspace = true }
ed25519-dalek = { version = "2", default-features = false, features = ["std", "rand_core"] }
hex = { workspace = true }
sha2 = { workspace = true }
hkdf = "0.12"
aunsorm-kms = { path = "../kms", optional = true }
aunsorm-core = { path = "../core" }
chacha20poly1305 = { workspace = true }

[dependencies.rusqlite]
optional = true
version = "0.31"
default-features = false
features = ["bundled"]

[dev-dependencies]
rand = "0.8"
tempfile = "3"
