[package]
name = "aunsorm-jwt"
version = "0.5.0"
edition = "2021"
authors = ["Aunsorm Authors <security@aunsorm.dev>"]
description = "Ed25519-based JWT signing, JWKS endpoint and JTI store for Aunsorm"
license = "Apache-2.0"
repository = "https://github.com/Neudzulab/Aunsorm-Security-Platform"
homepage = "https://github.com/Neudzulab/Aunsorm-Security-Platform"
rust-version = "1.76"
readme = "README.md"
keywords = ["jwt", "jwks", "ed25519", "authentication", "security"]
categories = ["cryptography", "authentication", "web-programming"]

[features]
default = ["sqlite"]
sqlite = ["dep:rusqlite"]
kms = ["dep:aunsorm-kms"]

[dependencies]
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
rand_core = { workspace = true }
ed25519-dalek = { version = "~2.1", default-features = false, features = ["std", "rand_core"] }
hex = { workspace = true }
sha2 = { workspace = true }
hkdf = "0.12"
aunsorm-kms = { path = "../kms", version = "0.5", optional = true }
aunsorm-core = { path = "../core", version = "0.5" }
chacha20poly1305 = { workspace = true }

[dependencies.rusqlite]
optional = true
version = "0.31"
default-features = false
features = ["bundled"]

[dev-dependencies]
rand = "0.8"
tempfile = "3"
time = { version = "0.3", features = ["formatting"] }
