[package]
name = "aunsorm-kms"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"
license = "Apache-2.0"
description = "Key management abstraction for the Aunsorm security toolkit."
readme = "README.md"
authors = ["Aunsorm Authors <security@aunsorm.dev>"]

[features]
default = []
# Gelecekteki sağlayıcılar için genişletilebilir bayraklar.
"kms-gcp" = []
"kms-azure" = []
"kms-pkcs11" = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
base64 = { workspace = true }
aes-gcm = { workspace = true }
hkdf = { workspace = true }
rand_core = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { version = "2", default-features = false, features = ["std", "rand_core"] }
hex = { workspace = true }

[dev-dependencies]
tempfile = "3"
serde_json = { workspace = true }
