[package]
name = "aunsorm-kms"
version = "0.4.0"
edition = "2021"
rust-version = "1.76"
license = "Apache-2.0"
description = "Key management abstraction for the Aunsorm security toolkit."
readme = "README.md"
authors = ["Aunsorm Authors <security@aunsorm.dev>"]

[features]
default = []
# Sağlayıcı bayrakları ilgili bağımlılıkları etkinleştirir.
"kms-gcp" = ["dep:reqwest", "dep:url"]
"kms-azure" = ["dep:reqwest", "dep:url", "dep:tracing"]
"kms-pkcs11" = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
base64 = { workspace = true }
aes-gcm = { workspace = true }
hkdf = { workspace = true }
rand_core = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { version = "2", default-features = false, features = ["std", "rand_core"] }
hex = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"], optional = true }
url = { version = "2.5", optional = true }
tracing = { version = "0.1", default-features = false, features = ["std"], optional = true }

[dev-dependencies]
tempfile = "3"
serde_json = { workspace = true }
tiny_http = "0.12"
