[package]
name = "aunsorm-mdm"
version = "0.5.0"
edition = "2021"
rust-version = "1.76"
license = "Apache-2.0"
description = "Mobile Device Management foundation for the Aunsorm security toolkit."
readme = "README.md"
authors = ["Aunsorm Authors <security@aunsorm.dev>"]
repository = "https://github.com/Neudzulab/Aunsorm-Security-Platform"
homepage = "https://github.com/Neudzulab/Aunsorm-Security-Platform"
keywords = ["mdm", "device-management", "security", "enrollment", "policy"]
categories = ["authentication", "network-programming"]

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
