[package]
name = "aunsorm-packet"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.76"
description = "Aunsorm paket formatı, AEAD şifreleme ve oturum ratchet entegrasyonu"

[features]
default = []
aes-siv = ["dep:aes-siv"]
hpke = ["dep:hpke"]

[dependencies]
aunsorm-core = { path = "../core" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
hkdf = { workspace = true }
zeroize = { workspace = true }
thiserror = { workspace = true }
rand_core = { workspace = true }
aes-gcm = { workspace = true }
chacha20poly1305 = { workspace = true }
aead = { workspace = true }
hmac = { workspace = true }
pmac = { workspace = true }
aes = { workspace = true }
base64 = { workspace = true }
subtle = { workspace = true }
aes-siv = { workspace = true, optional = true }
hpke = { workspace = true, optional = true }

[dev-dependencies]
hex = { workspace = true }
aunsorm-pqc = { path = "../pqc" }
proptest = "1"
rand_chacha = { workspace = true }
