[package]
name = "aunsorm-packet"
version = "0.5.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.76"
description = "Packet format, AEAD encryption and session ratchet integration for Aunsorm"
readme = "README.md"
authors = ["Aunsorm Authors <security@aunsorm.dev>"]
repository = "https://github.com/Neudzulab/Aunsorm-Security-Platform"
homepage = "https://github.com/Neudzulab/Aunsorm-Security-Platform"
keywords = ["encryption", "aead", "ratchet", "session", "cryptography"]
categories = ["cryptography", "network-programming"]

[features]
default = []
aes-siv = ["dep:aes-siv"]
hpke = ["dep:hpke"]

[dependencies]
aunsorm-core = { path = "../core", version = "0.5" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
hkdf = { workspace = true }
zeroize = { workspace = true }
thiserror = { workspace = true }
rand_core = { workspace = true }
aes-gcm = { workspace = true }
chacha20poly1305 = { workspace = true }
aead = { workspace = true }
hmac = { workspace = true }
pmac = { workspace = true }
aes = { workspace = true }
base64 = { workspace = true }
subtle = { workspace = true }
aes-siv = { workspace = true, optional = true }
hpke = { workspace = true, optional = true }
hex = { workspace = true }

[dev-dependencies]
aunsorm-pqc = { path = "../pqc" }
proptest = "=1.4.0"
rand_chacha = { workspace = true }
