[package]
name = "aunsorm-pqc"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Post-quantum cryptography bridge for Aunsorm secure tooling"
rust-version = "1.76"

[features]
default = ["kem-mlkem-768", "sig-mldsa-65"]
kem-mlkem-768 = ["pqcrypto-kyber"]
kem-mlkem-1024 = ["pqcrypto-kyber"]
sig-mldsa-65 = ["pqcrypto-dilithium"]
sig-falcon-512 = ["pqcrypto-falcon"]
sig-sphincs-shake-128f = ["pqcrypto-sphincsplus"]

[dependencies]
thiserror = { workspace = true }
zeroize = { workspace = true }
base64 = { workspace = true }
pqcrypto-kyber = { workspace = true, optional = true }
pqcrypto-dilithium = { workspace = true, optional = true }
pqcrypto-falcon = { workspace = true, optional = true }
pqcrypto-sphincsplus = { workspace = true, optional = true }
pqcrypto-traits = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
