[package]
name = "aunsorm-pqc"
version = "0.5.0"
edition = "2021"
license = "Apache-2.0"
description = "Post-quantum cryptography bridge for Aunsorm secure tooling"
rust-version = "1.76"
readme = "README.md"
authors = ["Aunsorm Authors <security@aunsorm.dev>"]
repository = "https://github.com/Neudzulab/Aunsorm-Security-Platform"
homepage = "https://github.com/Neudzulab/Aunsorm-Security-Platform"
keywords = ["post-quantum", "pqc", "ml-kem", "ml-dsa", "cryptography"]
categories = ["cryptography", "no-std"]

[features]
default = ["kem-mlkem-768", "sig-mldsa-65"]
kem-mlkem-768 = ["pqcrypto-mlkem"]
kem-mlkem-1024 = ["pqcrypto-mlkem"]
sig-mldsa-65 = ["pqcrypto-mldsa"]
sig-falcon-512 = ["pqcrypto-falcon"]
sig-sphincs-shake-128f = ["pqcrypto-sphincsplus"]

[dependencies]
thiserror = { workspace = true }
zeroize = { workspace = true }
base64 = { workspace = true }
pqcrypto-mlkem = { workspace = true, optional = true }
pqcrypto-mldsa = { workspace = true, optional = true }
pqcrypto-falcon = { workspace = true, optional = true }
pqcrypto-sphincsplus = { workspace = true, optional = true }
pqcrypto-traits = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
