[package]
name = "aunsorm-server"
version = "0.5.0"
edition = "2021"
license = "Apache-2.0"
description = "OAuth-like control plane for the Aunsorm secure tooling suite"
rust-version = "1.76"

[features]
default = []
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
]
http3-experimental = [
    "dep:bytes",
    "dep:futures",
    "dep:h3",
    "dep:h3-quinn",
    "dep:quinn",
    "dep:rustls",
]

[dependencies]
axum = { version = "0.7", features = ["json"] }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hkdf = { workspace = true }
aunsorm-acme = { path = "../acme" }
aunsorm-jwt = { path = "../jwt" }
aunsorm-core = { path = "../core" }
aunsorm-mdm = { path = "../mdm" }
aunsorm-id = { path = "../id" }
aunsorm-pqc = { path = "../pqc" }
ed25519-dalek = { version = "~2.1", features = ["std"] }
p256 = { version = "0.13", features = ["ecdsa"] }
rsa = { workspace = true }
signature = { version = "2", default-features = false, features = ["std"] }
url = { workspace = true }
zeroize = { workspace = true }
rand_core = { workspace = true }
hex = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tower-http = { version = "0.5", features = ["trace", "compression-full", "decompression-full", "cors"] }
rusqlite = { version = "0.31", default-features = false, features = ["bundled"] }
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
hyper = { version = "1", features = ["full"] }
hmac = "0.12"
sha1 = { version = "0.10", default-features = false, features = ["std"] }
opentelemetry = { version = "0.24", optional = true }
opentelemetry_sdk = { version = "0.24", optional = true, features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.17", optional = true, features = ["http-proto"] }
tracing-opentelemetry = { version = "0.25", optional = true }
bytes = { version = "1", optional = true }
futures = { version = "0.3", default-features = false, features = ["std"], optional = true }
h3 = { version = "0.0.8", optional = true }
h3-quinn = { version = "0.0.10", optional = true }
postcard = { version = "1.1", default-features = false, features = ["use-std"] }
quinn = { version = "0.11.7", default-features = false, features = ["runtime-tokio", "rustls"], optional = true }
rcgen = { version = "0.14", features = ["pem", "x509-parser"] }
rustls = { version = "0.22", optional = true }
x509-parser = { version = "0.18", features = ["verify"] }
pem = "3"
rustls-pki-types = "1"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
rcgen = { version = "0.14", features = ["pem", "x509-parser"] }
tempfile = "3"
