[package]
name = "aunsorm-wasm"
version = "0.4.1"
edition = "2021"
authors = ["Aunsorm Project Team"]
license = "Apache-2.0"
rust-version = "1.76"
description = "WebAssembly bindings for the Aunsorm security toolkit"

[features]
default = []
aes-siv = ["aunsorm-packet/aes-siv"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aunsorm-core = { path = "../core" }
aunsorm-packet = { path = "../packet" }
base64 = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
zeroize = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = "0.6"
thiserror = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3"
