[package]
name = "aunsorm-x509"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
description = "Ed25519 X.509 utilities with calibration bindings for Aunsorm"
rust-version = "1.76"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
aunsorm-core = { path = "../core" }
rcgen = { version = "0.14", default-features = true }
time = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
pem = "3"
