[package]
name = "aunsorm-x509"
version = "0.4.5"
edition = "2021"
license = "Apache-2.0"
description = "Ed25519 and RSA X.509 utilities with calibration bindings for Aunsorm"
rust-version = "1.76"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = "0.9"
base64 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
aunsorm-core = { path = "../core" }
rcgen = { version = "0.14", default-features = true, features = ["x509-parser"] }
time = { version = "0.3", features = ["formatting"] }
x509-parser = { version = "0.16", features = ["verify"] }
pem = "3"
ring = { workspace = true }
rsa = { workspace = true }
rand_core = { workspace = true }
hkdf = "0.12"
once_cell = "1"
[features]
default = []

[dev-dependencies]
